--- a/app/views/landing_pages/show.html.haml
+++ b/app/views/landing_pages/show.html.haml
@@ -1,12 +1,13 @@
 .page-header
   %h1
-    Example page header
+    Landing Pages
     %small Subtext for header
 .panel.panel-default
   / Default panel contents
   .panel-heading
     = @landing_page.name
-    = link_to 'Edit', edit_landing_page_path(@landing_page), class: "pull-right"
+    %button.btn.btn-default.btn-sm.pull-right{"data-target" => "#scriptModal", "data-toggle" => "modal"} Code Snippet
+    = link_to 'Edit', edit_landing_page_path(@landing_page), class: "btn btn-default btn-sm pull-right"
   .panel-body
     %p= @landing_page.url
   %table.table
@@ -16,3 +17,5 @@
     %tr
       %td January
       %td $100
+
+= render 'script'
