--- a/app/views/layouts/_dashboard.html.haml
+++ b/app/views/layouts/_dashboard.html.haml
@@ -1,8 +1,13 @@
 #sidebar-wrapper
   %ul.sidebar-nav
     %li.sidebar-brand
-      FastCall
-    %li= current_user.email
+      agileResponse
+    %li.dropdown
+      %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+        = current_user.email
+        %b.caret
+      %ul.dropdown-menu
+        %li= link_to "Edit my info", edit_user_registration_path
     %li.dropdown
       %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
         New
