--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 %html
   %head
-    %title Fastcall
+    %title agileResponse
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
@@ -11,7 +11,8 @@
       #wrapper
         = render 'layouts/dashboard'
         #page-content-wrapper
-          %a#menu-toggle.btn.btn-default{:href => "#menu-toggle"} Toggle Menu
+          %a#menu-toggle.btn.btn-default{:href => "#menu-toggle"}
+            %span.glyphicon.glyphicon-chevron-left Sidebar
           = yield
     - else
       = yield
