--- a/app/views/landing_pages/_form.html.haml
+++ b/app/views/landing_pages/_form.html.haml
@@ -2,4 +2,6 @@
   = f.input :url, placeholder: 'copy and paste entire url here'
   = f.input :name
   = f.input :business_id, collection: current_user_businesses
+  = f.input :call_script
+  = f.input :message_script
   = f.button :submit, class: 'btn btn-primary btn-submit' 
