--- a/app/views/pages/lead.html.haml
+++ b/app/views/pages/lead.html.haml
@@ -6,3 +6,6 @@
     %label{:name => "phone"} Phone
     %input#exampleInputPhone2.form-control{:name => "phone", :placeholder => "555-555-1234", :type => "phone"}
   %button.btn.btn-default{:type => "submit"} Call me
+
+:javascript
+  $( document ).ready(function() { $( 'form' ).submit(function( event ) { console.log( $( this ).serializeArray() ); var dataArray = $( this ).serializeArray(), dataObj = {}; $(dataArray).each(function(i, field){ dataObj[field.name] = field.value; }); $.ajax({ method: 'POST', url: 'http://localhost:3000/leads', data: {lead: { fields: dataObj, url: window.location.href, landing_page_id: 1} } }); event.preventDefault(); }); });
